infrastructure-live-v1/staging/vpc/1-vpc.tf
resource "aws_vpc" "weijiemain" {
  cidr_block = "10.0.0.0/16"

  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "weijie-staging-main"
  }
}
